src/test/ui/consts/assoc_const_generic_impl.stderr
warning: any use of this value will cause an error
  --> $DIR/assoc_const_generic_impl.rs:11:34
   |
LL |     const I_AM_ZERO_SIZED: ()  = [()][std::mem::size_of::<Self>()];
   |     -----------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-
   |                                  |
   |                                  index out of bounds: the length is 1 but the index is 4
   |
note: the lint level is defined here
  --> $DIR/assoc_const_generic_impl.rs:3:9
   |
LL | #![warn(const_err)]
   |         ^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: erroneous constant encountered
  --> $DIR/assoc_const_generic_impl.rs:14:18
   |
LL |         let () = Self::I_AM_ZERO_SIZED;
   |                  ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

